--- a/crates/edr_solidity/Cargo.toml
+++ b/crates/edr_solidity/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 alloy-json-abi = "0.5.2"
 edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
+edr_provider = { version = "0.2.0-dev", path = "../edr_provider", features = [""] }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 revm = { git = "https://github.com/Wodann/revm", rev = "93d8ebe", version = "3.3", default-features = false, features = ["dev", "serde", "std"] }
 serde = { version = "1.0.147", default-features = false, features = ["derive"] }
