--- a/crates/edr_provider/Cargo.toml
+++ b/crates/edr_provider/Cargo.toml
@@ -8,6 +8,7 @@ alloy-sol-types = { version = "0.5.1", default-features = false, features = ["st
 dyn-clone = { version = "1.0.13", default-features = false }
 edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
 edr_evm = { version = "0.2.0-dev", path = "../edr_evm" }
+edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" , optional = true}
 indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
 k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "std"] }
 lazy_static = { version = "1.4.0", default-features = false }
@@ -22,9 +23,11 @@ tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
 
 [dev-dependencies]
 anyhow = "1.0.75"
-edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" }
 tempfile = "3.7.1"
 
 [build-dependencies]
 cargo_toml = { version = "0.15.3", default-features = false }
 toml = { version = "0.5.9", default-features = false }
+
+[features]
+test_utils = ["edr_test_utils"]
