--- a/crates/edr_solidity/Cargo.toml
+++ b/crates/edr_solidity/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 alloy-json-abi = "0.5.2"
 edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
+edr_evm = { version = "0.2.0-dev", path = "../edr_evm" }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 revm = { git = "https://github.com/Wodann/revm", rev = "d6fea43", version = "3.5", default-features = false, features = ["dev", "serde", "std"] }
 parking_lot = { version = "0.12.1", default-features = false }
