--- a/crates/edr_provider/Cargo.toml
+++ b/crates/edr_provider/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0-dev"
 edition = "2021"
 
 [dependencies]
-alloy-sol-types = { version = "0.5.1", default-features = false, features = ["std"]}
+alloy-sol-types = { version = "0.6.4", default-features = false, features = ["std"]}
 anyhow = { version = "1.0.75", optional = true }
 dyn-clone = { version = "1.0.13", default-features = false }
 edr_defaults = { version = "0.2.0-dev", path = "../edr_defaults" }
@@ -16,6 +16,8 @@ itertools = { version = "0.12.0", default-features = false, features = ["use_all
 k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pem", "pkcs8", "precomputed-tables", "std"] }
 lazy_static = { version = "1.4.0", default-features = false }
 log = { version = "0.4.20", default-features = false }
+lru = "0.12.2"
+once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race", "std"] }
 parking_lot = { version = "0.12.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
 serde = { version = "1.0.147", default-features = false, features = ["derive"] }
@@ -24,7 +26,6 @@ sha3 = { version = "0.10.6", default-features = false }
 thiserror = { version = "1.0.37", default-features = false }
 tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
 tracing = { version = "0.1.37", features = ["attributes", "std"] }
-lru = "0.12.2"
 
 [dev-dependencies]
 anyhow = "1.0.75"
