--- a/crates/edr_solidity/Cargo.toml
+++ b/crates/edr_solidity/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.2.0-dev"
 edition = "2021"
 
 [dependencies]
+alloy-sol-types = { version = "0.6.4", default-features = false, features = ["json", "std"]}
 edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
 edr_evm = { version = "0.2.0-dev", path = "../edr_evm" }
+once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race", "std"] }
