--- a/packages/prototype/tsconfig.json
+++ b/packages/prototype/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "incremental": true
+    "incremental": true,
+    "jsx": "react"
   },
   "exclude": [
     "./dist",
